--- a/jaksim_ios/View/MeetingCreationDetail/CreationFourthSectionView/CreationFourthSection.xib
+++ b/jaksim_ios/View/MeetingCreationDetail/CreationFourthSectionView/CreationFourthSection.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,7 +17,10 @@
                 <outlet property="secondSubtitleLabel" destination="4dS-WL-I3i" id="Qkm-7l-aLH"/>
                 <outlet property="timeButton" destination="ep9-xm-Zhm" id="RDm-m0-mt2"/>
                 <outlet property="titleLabel" destination="sKS-rz-KqU" id="WjZ-xx-avO"/>
-                <outlet property="unitSelectionButton" destination="qRj-mm-Gw7" id="dhx-qN-XxL"/>
+                <outlet property="unitDropDownButton" destination="Jkg-0p-OCY" id="QRm-vZ-Yxc"/>
+                <outlet property="unitDropDownView" destination="yCa-QC-mYA" id="PZI-jd-hCm"/>
+                <outlet property="unitLabel" destination="ifC-sk-H3M" id="QtB-2u-M6h"/>
+                <outlet property="updownImageView" destination="oQa-jV-oZW" id="Ewk-Jf-AaS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -52,6 +56,9 @@
                                 <constraint firstAttribute="height" constant="44" id="aib-Eg-AL7"/>
                             </constraints>
                             <state key="normal" title="횟수"/>
+                            <connections>
+                                <action selector="countButtonDidTap:" destination="-1" eventType="touchUpInside" id="gLQ-6k-jk9"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jFg-pQ-RLa">
                             <rect key="frame" x="73" y="0.0" width="65" height="44"/>
@@ -60,6 +67,9 @@
                                 <constraint firstAttribute="width" constant="65" id="vgQ-GY-BFw"/>
                             </constraints>
                             <state key="normal" title="거리"/>
+                            <connections>
+                                <action selector="distanceDidTap:" destination="-1" eventType="touchUpInside" id="ZxD-94-TqP"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ep9-xm-Zhm">
                             <rect key="frame" x="146" y="0.0" width="65" height="44"/>
@@ -68,6 +78,9 @@
                                 <constraint firstAttribute="width" constant="65" id="VF5-1P-fO7"/>
                             </constraints>
                             <state key="normal" title="시간"/>
+                            <connections>
+                                <action selector="timeButtonDidTap:" destination="-1" eventType="touchUpInside" id="1qK-Iz-PKK"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
@@ -89,12 +102,43 @@
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="숫자 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vPB-0d-qx2">
                             <rect key="frame" x="0.0" y="0.0" width="203" height="48"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRj-mm-Gw7">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yCa-QC-mYA">
                             <rect key="frame" x="211" y="0.0" width="203" height="48"/>
-                            <state key="normal" title="회"/>
-                        </button>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifC-sk-H3M">
+                                    <rect key="frame" x="20" y="14" width="41.5" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oQa-jV-oZW">
+                                    <rect key="frame" x="171" y="14" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="g1Q-Yu-9hS"/>
+                                        <constraint firstAttribute="width" constant="20" id="lcp-rF-SeV"/>
+                                    </constraints>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jkg-0p-OCY">
+                                    <rect key="frame" x="0.0" y="0.0" width="203" height="48"/>
+                                    <connections>
+                                        <action selector="unitDropBoxDidTap:" destination="-1" eventType="touchUpInside" id="vhN-dJ-gRZ"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="Jkg-0p-OCY" firstAttribute="top" secondItem="yCa-QC-mYA" secondAttribute="top" id="IMD-J9-emW"/>
+                                <constraint firstItem="ifC-sk-H3M" firstAttribute="centerY" secondItem="yCa-QC-mYA" secondAttribute="centerY" id="Wau-kh-6dE"/>
+                                <constraint firstAttribute="trailing" secondItem="Jkg-0p-OCY" secondAttribute="trailing" id="a2k-EJ-CUW"/>
+                                <constraint firstItem="ifC-sk-H3M" firstAttribute="leading" secondItem="yCa-QC-mYA" secondAttribute="leading" constant="20" id="h1N-rm-xtM"/>
+                                <constraint firstItem="oQa-jV-oZW" firstAttribute="centerY" secondItem="yCa-QC-mYA" secondAttribute="centerY" id="sRV-Kt-8ER"/>
+                                <constraint firstAttribute="bottom" secondItem="Jkg-0p-OCY" secondAttribute="bottom" id="sSD-WL-a9A"/>
+                                <constraint firstAttribute="trailing" secondItem="oQa-jV-oZW" secondAttribute="trailing" constant="12" id="uHa-5K-1ti"/>
+                                <constraint firstItem="Jkg-0p-OCY" firstAttribute="leading" secondItem="yCa-QC-mYA" secondAttribute="leading" id="v3L-e7-v1g"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="IsK-Sm-eYE"/>
@@ -119,4 +163,9 @@
             <point key="canvasLocation" x="5.7971014492753632" y="-140.95982142857142"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
