--- a/jaksim_ios/View/MeetingCreationDetail/CreationSecondSectionView/CreationSecondSection.xib
+++ b/jaksim_ios/View/MeetingCreationDetail/CreationSecondSectionView/CreationSecondSection.xib
@@ -74,6 +74,9 @@
                                             <color key="value" red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="upButtonDidTap:" destination="-1" eventType="touchUpInside" id="SRW-MS-hwT"/>
+                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P9D-JG-xRy">
                                     <rect key="frame" x="0.0" y="10" width="10" height="10"/>
@@ -83,6 +86,9 @@
                                     </constraints>
                                     <color key="tintColor" red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="calibratedRGB"/>
                                     <state key="normal" title="down" image="down"/>
+                                    <connections>
+                                        <action selector="downButtonDidTap:" destination="-1" eventType="touchUpInside" id="THH-aQ-yS7"/>
+                                    </connections>
                                 </button>
                             </subviews>
                         </stackView>
